fix accessibility of contrast switch button

--- a/public/style.css
+++ b/public/style.css
@@ -161,11 +161,9 @@ body.animations .basic-button::after {
 }
 .animations-toggle-button_on {
   color: hsl(120deg, 95%, 55%);
-  text-shadow: 0px 2px 4px hsl(120deg, 95%, 55%);
 }
 .animations-toggle-button_off {
   color: hsl(0deg, 95%, 55%);
-  text-shadow: 0px 2px 4px hsl(0deg, 95%, 55%);
 }
 .animations-toggle-button_invisible-text {
   opacity: 0;
@@ -206,7 +204,18 @@ body.animations .basic-button::after {
     transform: scale(0.9);
   }
 }
+body:not(.contrast) .animations-toggle-button_on {
+  text-shadow: 0px 2px 4px hsl(120deg, 95%, 55%);
+}
+body:not(.contrast) .animations-toggle-button_off {
+  text-shadow: 0px 2px 4px hsl(0deg, 95%, 55%);
+}
+
 .switch-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
   position: relative;
   width: fit-content;
   background-color: #f1f1f1;
@@ -227,11 +236,7 @@ body.animations .basic-button::after {
   transform: scale(0.97, 0.9);
 }
 .switch-container label {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  padding: 0.5rem 1rem;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: bold;
   cursor: pointer;
 }
@@ -335,6 +340,15 @@ body.contrast .switch_on {
 }
 body.contrast .switch_off {
   color: hsl(0deg, 95%, 55%);
+}
+
+body:not(.contrast).purple .switch_cursor {
+  background-color: hsl(295deg, 95%, 55%);
+  box-shadow: 0 0 0.4rem hsl(295deg, 95%, 55%);
+}
+body:not(.contrast).purple .switch_state {
+  color: hsl(295deg, 95%, 55%);
+  text-shadow: 0 0.2rem 0.4rem hsl(295deg, 95%, 55%);
 }
 
 .components-layout {
