--- a/src/style/sass/Components/_switch.scss
+++ b/src/style/sass/Components/_switch.scss
@@ -1,4 +1,8 @@
 .switch-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.5rem 1rem;
     position: relative;
     width: fit-content;
     background-color: map-get($colors,white);
@@ -18,11 +22,7 @@
         transform: scale(0.97,0.9);
     }
     & label {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        padding: 0.5rem 1rem;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         font-weight: bold;
         cursor: pointer;
     }
@@ -130,5 +130,16 @@ body.contrast {
     }
     & .switch_off {
         color: map-get($colors,red);
+    }
+}
+
+body:not(.contrast).purple {
+    & .switch_cursor {
+        background-color: map-get($colors,purple);
+        box-shadow: 0 0 0.4rem map-get($colors,purple);
+    }
+    & .switch_state {
+        color: map-get($colors,purple);
+        text-shadow: 0 0.2rem 0.4rem map-get($colors,purple);
     }
 }
